[package]
name = "battleplanes"
version = "0.1.0"
authors = ["Flavius Aspra <flavius.as@gmail.com>"]

[dependencies]
rand = "*"
iron = "*"
env_logger = "*"
log = "*"
walkdir = "*"
notify = { version = "*", optional = true }
router = "*"
mount = "*"
staticfile = "*"
maud = { version = "*", features = ["iron"] }
maud_macros = "*"
iron-sessionstorage = "*"
uuid = { version = "*", features = ["v4"] }
concurrent-hashmap = "*"
plugin = "*"
urlparse = "*"
iron-send-file = "*"
